--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.7.0",
     "bcryptjs": "^3.0.2",
+    "framer-motion": "^12.15.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.1",
     "next-cloudinary": "^6.16.0",
